# tfbayes

./: .gitignore  AUTHORS  Makefile.am  README  README.html  README.md  TODO  configure.ac  foo  hdb-load-chrom.in  hdb-load-seq.in  hdb-load-upstream.in  hdb-read-chrom.in  hdb-read-seq.in  hdb-read-upstream.in  hdb-search-chrom.in  hdb-search-seq.in  hdb-search-upstream.in  hdb-statistics-chrom.in  hdb-statistics-seq.in  hdb-statistics-upstream.in  version.h.in
data/: Makefile.am
data/alignments/: ucsc-dromel-multiz15-FBgn0013686.bed  ucsc-dromel-multiz15-FBgn0013686.fa  ucsc-dromel-multiz15-FBgn0013686.init.nh  ucsc-dromel-multiz15-FBgn0013686.job  ucsc-dromel-multiz15-FBgn0013686.maf  ucsc-dromel-multiz15-FBgn0013686.sh  ucsc-hg19-multiz46-16s.bed  ucsc-hg19-multiz46-MTRNR2.bed  ucsc-hg19-multiz46-MTRNR2.fa  ucsc-hg19-multiz46-MTRNR2.init.nh  ucsc-hg19-multiz46-MTRNR2.maf  ucsc-hg19-multiz46-MTRNR2.mean.nh  ucsc-hg19-multiz46-MTRNR2.median.nh  ucsc-hg19-multiz46-MTRNR2.sh  ucsc-hg19-multiz46-U25123.fa  ucsc-hg19-multiz46-U25123.maf  ucsc-hg19-multiz46-U25123.mean.nh  ucsc-hg19-multiz46-U25123.median.nh  ucsc-hg19-multiz46-U25123.sh
db/: Makefile.am  humandb.c  humandb.h  interface.c  interface.py  load-sequence  read-sequence
dpm/: Makefile.am  cluster.cc  cluster.hh  clustermanager.cc  clustermanager.hh  clusters.cc  clusters.hh  code.cc  code.hh  component-model.cc  component-model.hh  data-gaussian.cc  data-gaussian.hh  data-tfbs.cc  data-tfbs.hh  data.cc  data.hh  datatypes.hh  distribution.cc  distribution.hh  dpm-gaussian-demo  dpm-gaussian-interface.cc  dpm-gaussian-interface.hh  dpm-gaussian-main.cc  dpm-gaussian.cc  dpm-gaussian.hh  dpm-tfbs-align  dpm-tfbs-demo  dpm-tfbs-demo.txt  dpm-tfbs-graph.hh  dpm-tfbs-interface.cc  dpm-tfbs-main.cc  dpm-tfbs-plot  dpm-tfbs-pwm  dpm-tfbs-scan  dpm-tfbs-weblogo  dpm-tfbs.cc  dpm-tfbs.hh  dpm.cc  dpm.hh  (+27 more)
humandb/: Makefile.am  hdb_load_chrom.py  hdb_load_seq.py  hdb_read_chrom.py  hdb_read_seq.py  hdb_search_chrom.py  hdb_search_seq.py  hdb_search_upstream.py  hdb_statistics_chrom.py  hdb_statistics_upstream.py  humandb.c  humandb.h  interface.c  interface.h  interface.py
libfastarithmetics/: Makefile.am  fast-lngamma-table.cc  fast-lngamma-table.hh  fast-lngamma.cc  fast-test.cc
libfastlog/: Makefile.am
libphylotree/: Makefile.am  alignment.hh  clonable.hh  gradient-ascent-test.cc  gradient-test.cc  incomplete-expression.cc  incomplete-expression.hh  incomplete-polynomial.cc  incomplete-polynomial.hh  interface.cc  interface.hh  likelihood-prime-test.cc  likelihood-prime.cc  likelihood-prime.hh  likelihood-test.cc  likelihood.cc  likelihood.hh  marginal-likelihood-test.cc  marginal-likelihood.cc  marginal-likelihood.hh  nodeset.cc  nodeset.hh  optimization-test.cc  phylotree-approximation-test.cc  phylotree-approximation.hh  phylotree-distribution.hh  phylotree-expand-test.cc  phylotree-expand.hh  phylotree-expected-terms.R  phylotree-expected-terms.cc  phylotree-gradient-coefficient.cc  phylotree-gradient-coefficient.hh  phylotree-gradient.hh  phylotree-hmm-test.cc  phylotree-hmm.hh  phylotree-lexer.ll  phylotree-mathematica.cc  phylotree-mathematica.nb  phylotree-parser-test.R  phylotree-parser-test.cc  (+16 more)
tfbayes/: Makefile.am  version.h.in
tfbayes/alignio/: MafIO.py  Makefile.am  __init__.py
tfbayes/alignment/: Makefile.am  __init__.py  alignment-hmm-test.cc  alignment-hmm.hh  alignment-test.cc  alignment-test.fa  alignment-test.mfa  alignment-test.py  alignment.hh  interface.cc  interface.py  sequence.hh  tools.py
tfbayes/cluster/: Makefile.am  __init__.py  cluster.py  fileio.py  information.py  parser.py  plot.py  tools.py
tfbayes/config/: Makefile.am  __init__.py  interface.cc  parser.py  partition-code-requires.hh  partition-code.hh  partition-lexer-code.hh  partition-lexer.hh  partition-lexer.ll  partition-main.cc  partition-main.hh  partition-parser-test.cc  partition-parser-test.txt  partition-parser.yy  results.py  sampler.py  tools.py
tfbayes/corebio/: Makefile.am  data.py  seq.py
tfbayes/dpm/: Makefile.am  __init__.py  abysmal-stack.hh  cluster.cc  cluster.hh  clustermanager.cc  clustermanager.hh  code.cc  code.hh  component-model.cc  component-model.hh  component-model_background.hh  component-model_bivariate.cc  component-model_default.cc  component-model_entropy.cc  component-model_foreground.hh  component-model_gaussian.hh  component-model_independence-mixture.cc  component-model_independence.cc  component-model_mixture.cc  component-model_product.cc  data-gaussian.cc  data-gaussian.hh  data-tfbs.cc  data-tfbs.hh  data.hh  datatypes.cc  datatypes.hh  dpm-gaussian-demo  dpm-gaussian-interface.cc  dpm-gaussian-interface.hh  dpm-gaussian-main.cc  dpm-gaussian-test  dpm-gaussian.cc  dpm-gaussian.hh  dpm-graph.hh  dpm-partition.cc  dpm-partition.hh  dpm-sampling-history.hh  dpm-tfbs-align  (+78 more)
tfbayes/entropy/: Makefile.am  entropy-approximation-10.csv  entropy-approximation-10.hh  entropy-approximation-2.ar  entropy-approximation-2.csv  entropy-approximation-2.hh  entropy-approximation-3.ar  entropy-approximation-3.csv  entropy-approximation-3.hh  entropy-approximation-4.ar  entropy-approximation-4.csv  entropy-approximation-4.hh  entropy-approximation-5.ar  entropy-approximation-5.csv  entropy-approximation-5.hh  entropy-approximation-6.csv  entropy-approximation-6.hh  entropy-approximation-7.csv  entropy-approximation-7.hh  entropy-approximation-8.csv  entropy-approximation-8.hh  entropy-approximation-9.csv  entropy-approximation-9.hh  entropy-approximation-mixture.hh  entropy-approximation-recursive.hh  entropy-approximation-test.cc  entropy-approximation.R  entropy-approximation.cc  entropy-approximation.hh  entropy-density.R  entropy-distribution-test.R  entropy-distribution-test.cc  entropy-distribution.hh  entropy-example.R  entropy-multinomial-distribution-test.cc  entropy-multinomial-distribution.hh  entropy-plot.R  entropy-sampler.R  entropy-test.cc  entropy.R  (+2 more)
tfbayes/exception/: Makefile.am  exception.h
tfbayes/fasta/: Makefile.am  __init__.py  fasta.cc  fasta.hh  fasta.py  (+1 more)
(+349 files in other folders)
