## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	alignments/ucsc-hg19-multiz46-MTRNR2.bed \
	alignments/ucsc-hg19-multiz46-MTRNR2.fa \
	alignments/ucsc-hg19-multiz46-MTRNR2.init.nh \
	alignments/ucsc-hg19-multiz46-MTRNR2.mean.nh \
	alignments/ucsc-hg19-multiz46-MTRNR2.median.nh \
	alignments/ucsc-hg19-multiz46-MTRNR2.sh \
	alignments/ucsc-hg19-multiz46-U25123.bed \
	alignments/ucsc-hg19-multiz46-U25123.fa \
	alignments/ucsc-hg19-multiz46-U25123.init.nh \
	alignments/ucsc-hg19-multiz46-U25123.mean.nh \
	alignments/ucsc-hg19-multiz46-U25123.median.nh \
	alignments/ucsc-hg19-multiz46-U25123.sh \
	trees/ucsc-hg19-multiz46.nh
